--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mannuelMenneses/EasyCodeAPI#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.15.4"
   }
 }
